# malachite

./: BREAKING_CHANGES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING_CODE.md  Makefile  README.md  RELEASE_NOTES.md
.github/workflows/: coverage.yml  mbt.yml  rust.yml
code/: Cargo.toml  DRIVER_IMPLEMENTATION_NOTES.md  DRIVER_PROGRESS.md  DRIVER_TRANSFORMATION_STATUS.md  Makefile  PHASE_3A_COMPLETE.md  THRESHOLD_CHANGES.md  VOTEKEEPER_SIMPLIFICATION.md  cargo-maelstrom.toml
code/.cargo/: config.toml
code/crates/actors/src/: consensus.rs
code/crates/app-channel/: Cargo.toml
code/crates/app-channel/src/: connector.rs  lib.rs  msgs.rs  run.rs  spawn.rs
code/crates/app/src/: lib.rs  node.rs  spawn.rs  types.rs
code/crates/config/src/: lib.rs
code/crates/consensus-async/: Cargo.toml
code/crates/consensus-async/src/: config.rs  lib.rs  query.rs  timeout.rs  timers.rs
code/crates/consensus-async/src/handlers/: consensus.rs  mod.rs  signing.rs  sync.rs  timeout.rs  wal.rs
code/crates/consensus-async/src/handlers/impls/: mod.rs
code/crates/consensus-async/src/handlers/impls/tokio/: mod.rs  timeout.rs
code/crates/core-consensus/: Cargo.toml
code/crates/core-consensus/src/: effect.rs  error.rs  full_proposal.rs  handle.rs  input.rs  lib.rs  macros.rs  params.rs  prelude.rs  state.rs  types.rs
code/crates/core-consensus/src/handle/: decide.rs  driver.rs  gossip.rs  liveness.rs  proposal.rs  propose.rs  proposed_value.rs  sync.rs  (+7 more)
code/crates/core-consensus/tests/: full_proposal.rs
code/crates/core-driver/: Cargo.toml
code/crates/core-driver/src/: driver.rs  input.rs  lib.rs  mux.rs  output.rs  proposal_keeper.rs
code/crates/core-state-machine/: Cargo.toml
code/crates/core-state-machine/src/: input.rs  output.rs  state.rs  state_machine.rs
code/crates/core-types/src/: certificate.rs  lib.rs  proposal.rs  round.rs  signed_message.rs  signing.rs  threshold.rs  timeout.rs  value.rs  vote.rs
code/crates/core-votekeeper/: Cargo.toml
code/crates/core-votekeeper/src/: evidence.rs  keeper.rs  lib.rs  round_votes.rs
code/crates/core-votekeeper/tests/: round_votes.rs  vote_keeper.rs
code/crates/discovery/src/: behaviour.rs  config.rs  connection.rs  controller.rs  lib.rs
code/crates/engine/: Cargo.toml
code/crates/engine/src/: consensus.rs  host.rs  network.rs  sync.rs  wal.rs
code/crates/metrics/src/: metrics.rs
code/crates/network/src/: behaviour.rs  channel.rs  lib.rs  pubsub.rs
code/crates/peer/src/: lib.rs
code/crates/proto/src/: lib.rs
code/crates/signing-ecdsa/: Cargo.toml
code/crates/signing-ecdsa/src/: lib.rs
code/crates/starknet/p2p-proto/: build.rs
code/crates/starknet/p2p-types/: Cargo.toml
code/crates/sync/: Cargo.toml
code/crates/sync/src/: behaviour.rs  config.rs  effect.rs  handle.rs  lib.rs  metrics.rs  scoring.rs  state.rs  types.rs
code/crates/test/: Cargo.toml  build.rs
code/crates/test/app/: Cargo.toml  config.toml
code/crates/test/proto/: consensus.proto  liveness.proto  sync.proto  transaction.proto
code/crates/test/src/: context.rs  decided_value.rs  lib.rs  middleware.rs  node.rs  proposal.rs  proposal_part.rs  signing.rs  validator_set.rs  value.rs  vote.rs
code/crates/test/utils/: Cargo.toml
code/crates/test/utils/src/: tc.rs
code/crates/wal/: Cargo.toml
code/crates/wal/src/: log.rs
code/examples/actor/parts/: Cargo.toml  Notes.md  README.md  build.rs  spawn.bash  transaction-flow.md
code/examples/actor/proposal/: Cargo.toml  Notes.md  README.md  spawn.bash
code/examples/actor/proposal/app/src/: main.rs
code/examples/actor/proposal/proto/: block.proto  common.proto  consensus.proto
code/examples/actor/proposal/src/: actor.rs  app.rs  codec.rs  lib.rs  mempool.rs  metrics.rs  mock_host.rs  node.rs  proposal.rs  spawn.rs  state.rs  store.rs  types.rs
code/examples/actor/proposal/src/codec/: mod.rs  protobuf.rs
code/examples/actor/proposal/src/mempool/: actor.rs  load.rs  mod.rs
code/examples/actor/proposal/src/metrics/: metrics.rs  mod.rs
code/examples/actor/proposal/src/store/: block_store.rs  db.rs  error.rs  keys.rs  mod.rs  types.rs
code/examples/actor/proposal/src/types/: address.rs  block.rs  context.rs  hash.rs  height.rs  lib.rs  mod.rs  proposal.rs  proposal_part.rs  signing.rs  transaction.rs  validator_set.rs  value.rs  vote.rs
code/examples/actor/test/: Cargo.toml
code/examples/actor/test/src/: lib.rs
code/examples/actor/test/src/tests/: n3f0_pubsub_protocol.rs  wal.rs
code/examples/channel/: config.toml  spawn.bash
code/examples/channel/src/: app.rs  node.rs  state.rs  store.rs  streaming.rs
code/scripts/: Makefile  spawn.bash
code/scripts/monitoring/: .gitignore  compose.yml
code/scripts/monitoring/prometheus/: prometheus.yml
code/sn/0/config/: config.toml  genesis.json  priv_validator_key.json
code/sn/1/config/: config.toml  genesis.json
code/sn/1/db/: blocks.db
code/sn/1/wal/: consensus.wal
docs/architecture/: adr-003-values-propagation.md  adr-004-coroutine-effect-system.md  adr-005-value-sync.md  readme.md
docs/tutorials/: channels.md
important_files/: FaB-a-la-Tendermint-bounded-square.md  tendermint5f_algorithm.qnt  tendermint5f_consensus.qnt
qa/docker/: entrypoint.sh
qa/starknet/: .gitignore  README.md  docker-compose.yml  generate.py  malachite.Dockerfile  manage.sh  sequencer  sequencer.Dockerfile
qa/starknet/config/sequencer-node-1/: config.json
qa/starknet/config/sequencer-node-2/: config.json
qa/starknet/logs/: README.md
qa/starknet/scripts/: apply-tc-rules-all.sh  apply-tc-rules.py  latencies.csv
qa/starknet/setup/: requirements.txt
qa/starknet/shared/scripts/: apply-tc-rules-all.sh  apply-tc-rules.py  latencies.csv
qa/starknet/templates/: bashrc.j2  docker-compose.j2  malachite-cli-start.j2  malachite-config.j2  sequencer-cli-start.j2
qa/terraform/templates/: commands.tmpl
specs/consensus/: README.md  overview.md  recovery.md
specs/consensus/quint/: statemachineAsync.qnt
specs/synchronization/rebroadcast/: consensus.qnt
web/: index.html  styles.css
(+147 files in other folders)
