[package]
name = "informalsystems-malachitebft-consensus-async"
description = "High-level async consensus API for the Malachite BFT consensus engine"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
readme = "../../../README.md"

[package.metadata.docs.rs]
all-features = true

[features]
timers = []

[dependencies]
malachitebft-core-types = { workspace = true }
malachitebft-core-consensus = { workspace = true }
malachitebft-sync = { workspace = true }

async-trait = { workspace = true }
derive-where = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
