[package]
name = "informalsystems-malachitebft-consensus-async"
description = "High-level async consensus API for the Malachite BFT consensus engine"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
readme = "../../../README.md"

[package.metadata.docs.rs]
all-features = false
rustdoc-args = ["--cfg", "docsrs"]

[features]
serde = ["dep:serde", "dep:humantime-serde"]

[dependencies]
malachitebft-core-types = { workspace = true }
malachitebft-core-consensus = { workspace = true }
malachitebft-sync = { workspace = true }

async-trait = { workspace = true }
derive-where = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, optional = true }
humantime-serde = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
