[package]
name = "informalsystems-malachitebft-actor-test"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Actor proposal dependencies
informalsystems_malachitebft_actor_app_proposal = { path = "../proposal" }

# Core malachite dependencies  
malachitebft-engine.workspace = true
malachitebft-core-types.workspace = true
malachitebft-config.workspace = true
malachitebft-core-consensus.workspace = true
malachitebft-metrics.workspace = true
malachitebft-test-framework.workspace = true

async-trait.workspace = true
axum.workspace = true
bytesize.workspace = true
eyre.workspace = true
rand.workspace = true
ractor.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true

[lints]
workspace = true